 9. For consistency, use "Player settings" in manage players dialog.
10. Listen for 'click' and not 'touchend' to make media controls show.
11. Click on 'No playing' tab whilst already on 'Now playing' will toggle song
    info.
12. Click on cover in 'Now playing' only shows context menu for iOS, as other
    OS's can use context menu event.
13. Add pre-caching of 300x300 artwork - thnaks to Michael Herger.
14. Use smaller apps, etc, avatars in pinned list, main radio ans apps lists.

0.9.2
-----
1. Fix Qobuz (and others?) search field.
2. Use new CSS line-clamp property to limit each section of now-playing text
   (e.g. title, artist, album) to 2 lines.
3. When getting lyrics from MAI, if we have a track_id then just pass that and
   not other details.
4. When getting biography from MAI, if we have an artist_id then just pass that
   and not artist name string.
5. Use plugin to recolour SVG images, as opposed to having dark and light
   variants.
6. Colour active tab icon and label, as this matches material.
7. Fix showing images.

0.9.1
-----
 1. Fix "TuneIn Options" when "More" selected from now-playing.
 2. Allow grid in more cases - e.g. "What was that tune?"
 3. Don't square off radio logos in queue and desktop bottom bar.
 4. Always use recycler view for grids, and for lists where its possible to
    switch to grid. (Recycler is quicker to update when toggling).
 5. Fix toggling image sizes when 1st image does not have size parameters (e.g.
    radio search results).
 6. For mobile layout, show song details in toolbar of now-playing view if song
    info is being displayed.
 7. For mobile layout, only toggle play/pause and info button if screen width is
    less than 600px.
 8. No need for lazy-load of images with recycler.
 9. Add a "now-playing" view. This is the same as the expanded desktop view, but
    designed to show only now playing info.
10. New icon for 'Browse' tab, and use music note for now-playing tab, in mobile
    layout.